# PyPlaneGeometry

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml
docs/: conf.py  index.rst  requirements.txt
examples/: ApollonianGasket.py  ApollonianGasketMobius.py  ApollonianIcosahedralGasket.py  Circles_simultaneously_tangent.py  (+13 more)
planegeometry/: .readthedocs.yml  internal.py  pyproject.toml  requirements.txt
planegeometry/docs/: conf.py  index.rst
planegeometry/docs/_build/: index.rst
planegeometry/docs/_build/.doctrees/: environment.pickle  index.doctree
planegeometry/docs/_html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
planegeometry/docs/_html/.doctrees/: environment.pickle  index.doctree
planegeometry/examples/: ApollonianGasket.py  ApollonianGasket_animation.py  Circles_simultaneously_tangent.py  EllipticalBilliard.py  EllipticalNestedSteinerChains.py  EllipticalNestedSteinerChains3D_animation.py  EllipticalNestedSteinerChains3D_animation3.py  EllipticalSteinerChain_animation.py  HyperbolicTesselation.py  HyperbolicTesselation2.py  Inversions.py  MalfattiApollonian.py  MalfattiApollonian_animation.py  ModularTessellation.py  ModularTessellation_animation.py  NestedSteinerChains.py  NestedSteinerChains_animation.py  SteinerChainWithEllipse.py  example1.py  triangularApollonianGasket.py  triangularCircularGasket.py
planegeometry/planegeometry/: geometry.py  internal.py
planegeometry/tests/: test_AxisScaling.py  test_Circle.py  test_Ellipse.py  test_Inversion.py  test_Mobius.py  test_Shear.py  test_Triangle.py
(+10 files in other folders)
