[tool.poetry]
name = "planegeometry"
version = "0.1.0"
description = "Plane geometry"
homepage = "https://github.com/stla/PyPlaneGeometry"
authors = ["Stéphane Laurent <laurent_step@outlook.fr>"]
documentation = "https://pyplanegeometry.readthedocs.io/en/latest/"
keywords = ["plane geometry", "geometry"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.24.2"
sphinx = { version = "^5.3.0", optional = true }
sphinx-rtd-theme = { version = "^1.1.1", optional = true }
sphinxcontrib-restbuilder = { version = "^0.3", optional = true }

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-restbuilder"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
